flex/flex-tests/testData/js2_highlighting/CreateClassOrInterfaceAction9.js2
package {
public class CreateClassOrInterfaceAction9 {
  private function foo() {
    var v : CreateClassOrInterfaceAction9 = <error descr="Initializer type Abc is not assignable to variable type CreateClassOrInterfaceAction9">new <error descr="Unresolved type Abc">Abc</error>(this)</error>;
  }
}
}
